[project]
name = "dtgs"
version = "0.1.0"
description = "Dynamic Tool Generation System (DTGS) — auto-discover LLM tools from Java codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.21",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
