[project]
name = "dtgs"
version = "0.1.0"
description = "Dynamic Tool Generation System (DTGS) — auto-discover LLM tools from Java codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtgs-sdk[langchain]",
    "fastapi>=0.135.2",
    "httpx>=0.28.0",
    "langchain-core>=1.2.21",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "dtgs_sdk",
]

[tool.uv.sources]
dtgs-sdk = { workspace = true }
